--- a/style.css
+++ b/style.css
@@ -77,13 +77,33 @@ button#b3 { color: var(--Verydarkcyan);}
 
 .attribution {
   font-size: 11px; text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .attribution a { color: hsl(228, 45%, 44%); }
 
 
 @media only screen and (max-width: 400px) {
+  main {
+    width: 45vh;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 100%;
+    height: 66vh;
+  }
+
+  .card:nth-child(1) { border-radius: 8px 8px 0 0;}
+  .card:nth-child(3) { border-radius: 0 0 8px 8px;}
+
+  .card button {
+    margin-top: 2em;
+  }
+}
+
+@media only screen and (max-height: 400px) {
   main {
     width: 45vh;
     flex-wrap: nowrap;
