--- a/style.css
+++ b/style.css
@@ -105,14 +105,14 @@ button#b3 { color: var(--Verydarkcyan);}
 
 @media only screen and (max-height: 400px) {
   main {
-    width: 45vh;
+    width: 300px;
     flex-wrap: nowrap;
     flex-direction: column;
   }
 
   .card {
     width: 100%;
-    height: 66vh;
+    height: 400px;
   }
 
   .card:nth-child(1) { border-radius: 8px 8px 0 0;}
